# OBJ_Ray_cating_Game

./: .gitignore  .gitmodules  CMakeLists.txt  Constants.h  Map.cpp  Map.h  Point2D.cpp  Point2D.h  README.md  Renderer.cpp  Renderer.h  map.txt
headers/: Draw.h  KeyBoard.h  MainPlayer.h  Object2D.h  RayCastStruct.h  ScriptObject.h
include/: algorithms.h  back_ground.h  button.h  config.h  draw_fon_button.h  gamewindow.h  map.h  map_drawing.h  player.h  ppm_utils.h  render.h  spite_drawing.h  sprite.h  textures.h
soft/: stb_image.h
src/: algorithms.cpp  back_ground.cpp  button.cpp  draw_fon_button.cpp  gamewindow.cpp  gui.cpp  main.cpp  map.cpp  map_drawing.cpp  player.cpp  ppm_utils.cpp  render.cpp  sprite.cpp  sprite_drawing.cpp  textures.cpp
